--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>cn.vworld</groupId>
   <artifactId>LTYP</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>LTYP Maven Webapp</name>
   <url>http://maven.apache.org</url>
